:sparkles: rewrite/simplify theme

--- a/examples/wordpress-next/packages/wordpress-theme/style.css
+++ b/examples/wordpress-next/packages/wordpress-theme/style.css
@@ -1,7 +1,10 @@
 /*
-  Theme Name: GS&F
-  Author: GS&F
-  Description: Custom wordpress theme for gsandf.com
-  Version: 0.0.1
-  Tags: React
+Theme Name: GS&F Headless
+Version: 2.0.0
+Description: Custom wordpress theme for headless WordPress development
+Author: GS&F Devs
+Author URI: https://gsandf.com
+Requires at least: 5.0
+Tested up to: 5.8
+Requires PHP: 7.0
 */
